--- a/.github/workflows/agent_fix-obi.yml
+++ b/.github/workflows/agent_fix-obi.yml
@@ -80,6 +80,7 @@ jobs:
             4. Write a single file **`triage.md`** in the repository root with:
                - For each failing check: name, workflow/job, and extracted error messages or clues with enough context to understand what went wrong.
                - One short section per failure; keep each section focused.
+               - If this PR updates the OBI submodule: note the **old and new OBI commit SHAs** (from the PR branch: e.g. `git diff main -- .obi-src` or submodule pointer in the diff). The next step will use OBI history since the old SHA to guide porting.
 
             **How to treat failures:**
             - **Timeouts**: Treat CI job timeouts as indicative of an underlying issue. Record them in triage.md with the job name and any log tail (e.g. last activity before timeout) so the next step can investigate. Exception: **RCU CPU stalls** in VM workflows are a known occurrence; note them and label as "RCU CPU stall (VM workflow, known class)" so the plan step can treat them differently if appropriate.
@@ -166,10 +167,17 @@ jobs:
             - **triage.md** (in repo root) from the previous step
             - **Source code** of Beyla and the `.obi-src` (OBI) submodule
 
+            **Scope:** Ideally limit the plan to **porting changes from OBI into Beyla**, based on **new OBI commits** since the submodule was last updated on main. You do not need to switch branches: the **git diff on the PR branch** (e.g. `git diff main -- .obi-src` or the submodule pointer) shows the old and new OBI submodule SHAs. Then inspect **OBI history directly from the submodule dir** (e.g. `git -C .obi-src log OLD_SHA..HEAD`, `git -C .obi-src diff OLD_SHA..HEAD`) to see what changed in OBI and what to port into Beyla.
+
             Context (use when planning):
             - **Generated tests**: `scripts/generate-obi-tests.sh` generates into `internal/testgenerated`. Do not plan edits to `internal/testgenerated`; plan script or extension changes instead.
             - **Breaking changes** often need: `pkg/beyla/config.go`, Go symbol/API refactors, or semantic conventions changes.
             - **Beyla/OBI**: See `scripts/generate-obi-tests.sh` (BEHAVIORAL_TRANSFORMS, CODE_INJECTIONS) for integration; fixes should be in Beyla only, not in `.obi-src`.
+
+            **Approach (no test skipping):**
+            - **Address failures at the source.** Do not plan to skip or disable tests; fix the underlying cause so tests pass.
+            - **Upstream (OBI) changes:** If a fix properly belongs in OBI, recommend upstream changes in the plan (describe what should change in OBI) and note that the PR comment should ask for that upstream fix; do not plan to skip tests as a workaround.
+            - **Temporary patches:** Code injections in the test generator script (`scripts/generate-obi-tests.sh`, e.g. CODE_INJECTIONS) can be used for temporary patches, but call this out as a **last resort**; prefer porting the proper fix from OBI into Beyla.
 
             **How to treat triage entries:**
             - **Timeouts**: Treat CI timeouts as indicative of an underlying issue and include them in the plan (e.g. increase timeout only if justified, or fix the hang/slow path). Exception: failures explicitly labeled in triage as "RCU CPU stall (VM workflow, known class)" may be noted as known infrastructure flakiness; the plan need not require code changes for those unless other evidence points to a fix.
@@ -269,13 +277,20 @@ jobs:
             Your only job is to implement the plan and push. Do **not** re-open large log files, re-download CI artifacts, or run the full test suite. Use only:
             - **plan.md** (in repo root) from the previous step
             - If you need extra context: **triage.md** from the first step
-            - Source code as needed
+            - Source code as needed (including `.obi-src` for reference; inspect OBI history from the submodule dir if the plan refers to porting from new OBI commits).
+
+            **Scope:** Prefer porting changes from OBI into Beyla. The PR branch git diff shows the old and new OBI submodule SHAs; use `git -C .obi-src log OLD_SHA..HEAD` and diffs in `.obi-src` to see what changed in OBI and port the relevant fixes into Beyla.
+
+            **Approach (no test skipping):**
+            - **Address failures at the source.** Do not implement test skipping or disabling; fix the underlying cause so tests pass.
+            - **Upstream (OBI) changes:** If the plan recommends an upstream fix in OBI, say so in the PR comment and describe what should change in OBI; do not skip tests as a workaround.
+            - **Temporary patches:** Code injections in `scripts/generate-obi-tests.sh` (e.g. CODE_INJECTIONS) are a **last resort** only; prefer porting the proper fix from OBI into Beyla.
 
             Instructions:
             1. Read **plan.md** and implement every item in Beyla only. Do **not** change the OBI submodule (`.obi-src/`).
             2. Do not modify **`internal/testgenerated`** — it is generated; change the script or extensions instead.
             3. After editing, run **`make fmt lint`** (or at least **`make lint`**) as a quick static check.
-            4. Commit your changes and push to this PR branch using the commit signing API (no local git push). Post a concise PR comment: what failed, what you changed (file/line if useful), and what was committed and pushed.
+            4. Commit your changes and push to this PR branch using the commit signing API (no local git push). Post a concise PR comment: what failed, what you changed (file/line if useful), what was committed and pushed, and any recommended upstream (OBI) changes.
 
             Safety:
             - Read-only git for inspect; use the provided tools to commit and push. Do not force-push or overwrite the submodule commit.
